Regression: Select tool does not work on bones in weight paint grease pencil #106998

Closed
opened 2023-04-16 05:09:05 +02:00 by Kirill-23 · 3 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94

Blender Version
Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: 1be25cfff18b

Caused by 2eeec49640

Short description of error
[Previously, in blender 3.3 when regify bones with greese pensil you could in the weght paint mode click on the bone with the left mouse button pressed and the required bone was selected, but now in version 3.5 and alpha 3.6 this function does not work which complicates the rigify process]

Exact steps for others to reproduce the error
[1. Select new 2D animation
2. Draw a simplified arm
3.Create on top of the bone
Combine with the empty groups.
5. Hold down the shifter and left click first on the bone then on the greese pensil
6. Go to Weight paint mode
7. and try holding down the shifter and click on the desired bone, it does not work and in blender version 3.3 it worked]
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 516.94 **Blender Version** Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: `1be25cfff18b` Caused by 2eeec49640b3df3f975d947936998cf05443424a **Short description of error** [Previously, in blender 3.3 when regify bones with greese pensil you could in the weght paint mode click on the bone with the left mouse button pressed and the required bone was selected, but now in version 3.5 and alpha 3.6 this function does not work which complicates the rigify process] **Exact steps for others to reproduce the error** [1. Select new 2D animation 2. Draw a simplified arm 3.Create on top of the bone Combine with the empty groups. 5. Hold down the shifter and left click first on the bone then on the greese pensil 6. Go to Weight paint mode 7. and try holding down the shifter and click on the desired bone, it does not work and in blender version 3.3 it worked] [Based on the default startup or an attached .blend file (as simple as possible)]
Kirill-23 added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-04-16 05:09:06 +02:00

image
image

![image](/attachments/2db24131-f585-46ce-9edc-253a68785e5c) ![image](/attachments/4673985f-6797-4d4c-a106-b0aec71f52d9)

Can confirm, will check.

Can confirm, will check.
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-04-18 10:39:56 +02:00

Hm, caused by own 2eeec49640, lets see what we can do here...

Hm, caused by own 2eeec49640b3df3f975d947936998cf05443424a, lets see what we can do here...
Philipp Oeser self-assigned this 2023-04-18 11:13:29 +02:00
Philipp Oeser changed title from Select tool does not work on bones in weght paint greese pensil to Regression: Select tool does not work on bones in weght paint greese pensil 2023-04-18 11:13:53 +02:00
Philipp Oeser added
Module
Grease Pencil
Interest
User Interface
Priority
High
and removed
Priority
Normal
labels 2023-04-18 11:14:23 +02:00
Philipp Oeser changed title from Regression: Select tool does not work on bones in weght paint greese pensil to Regression: Select tool does not work on bones in weight paint grease pencil 2023-04-18 11:14:41 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-19 09:14:03 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#106998
There is no content yet.